...
  isLoading = false,
  isRefreshingBackground = false,
}) => {
  if (isLoading) {
    return (
      <Center style={{ flex: 1 }}>
        <Spinner testID="list-spinner" />
      </Center>
    );
  }

  const hasContent = requests.length > 0 || physicalPresenceDispatches.length > 0;

  if (!hasContent) {
    return (
      <Center style={{ flex: 1 }}>
        <Text testID="empty-list-text">Sin solicitudes pendientes</Text>
      </Center>
    );
  }

  return (
    <Box style={{ flex: 1 }}>
...
